--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="shortcut icon" href="imagens/IconePagina.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="style.css">
     <title>Dentista</title>
 </head>
 <body class="text-bg-white">
@@ -421,16 +420,36 @@
             <p class="text-center fs-1 fw-bolder">Antes e Depois</p>
             <img src="imagens/AntesEDepois.png" alt="" class="img-fluid rounded shadow">
         </section>
-        <section class="m-3 fixed-bottom w-25 ms-auto d-flex justify-content-end">
-            <a href="https://web.whatsapp.com/" target="_blank" class="bg-success p-3 rounded-circle">
+        <section class="m-3 fixed-bottom w-25 ms-auto d-flex justify-content-end ">
+            <a href="https://web.whatsapp.com/" target="_blank" class="bg-success p-3 rounded-circle d-flex justify-content-center align-items-center">
                 <i class="bi bi-whatsapp fs-1 text-white"></i>
             </a>
         </section>
     </main>
-    <footer class="text-bg-light p-3">
-        <p class="text-center m-0">
-            <a href="#" class="text-decoration-none text-muted">@Eu</a>
-        </p>
+    <footer class="container-fluid text-bg-info bg-gradient p-3 w-100">
+        <section class="row row-cols-1 row-cols-sm-2 text-muted" >
+            <section class="col vstack mb-3">
+                <p class="h6">Créditos</p>
+                <p>Desenvolvido por Leonardo</p>
+                <p class="h6">Redes Sociais</p>
+                <p>
+                    <a href="https://www.linkedin.com/in/leonardo-silvafront/" target="_blank" class="link-dark">
+                        <i class="bi bi-linkedin"></i> LinkedIn
+                    </a>
+                </p>
+                <p>
+                    <a href="https://github.com/Leofront-end" target="_blank" class="link-dark">
+                        <i class="bi bi-github"></i> GitHub
+                    </a>
+                </p>
+            </section>
+            <section class="col vstack mb-3">
+                <p class="h6">Informações de Contato</p>
+                <p><i class="bi bi-telephone-fill"></i> (11) 99999-9999</p>
+                <p><i class="bi bi-envelope-fill"></i> Email@email.com</p>
+                <p><i class="bi bi-geo-alt-fill"></i> Rua Teste de rua, xx</p>
+            </section>
+        </section>
     </footer>
 
     <script src="script.js"></script>
